z_old/k8s-on-proxmox/gitops/apps/expose-argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints: [ "websecure" ]
  routes:
    - match: Host(`argocd.trust.k8s.internal`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: https-insecure
  tls:
    secretName: argocd-trust-tls
